--- a/.github/workflows/demo-journaux.yaml
+++ b/.github/workflows/demo-journaux.yaml
@@ -2,15 +2,16 @@ name : Github Action Demo
 on : push
 jobs :
   Premier-job :
-      name: Premier Job
+      name: Premier-Job
       runs-on : ubuntu-latest
       steps :
           - run : echo "Premier Job"
           - run : echo "Fin"
     
-  Dernier-Job:
-    name: Dernier-Job
+  Deuxieme-Job:
+    name: Deuxieme-Job
     runs-on: ubuntu-latest
+    needs : Premier-Job
     steps:
-      - run: echo "Dernier Job"
+      - run: echo "Deuxieme Job"
       - run: echo "Fin"   
